2010-04-21  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Eric Seidel.

        new-run-webkit-tests: try to detect alternate apache path
        https://bugs.webkit.org/show_bug.cgi?id=37587

        _check_port_build() also needs to return true in the
        base implementation to not fail the check_build step.

        * Scripts/webkitpy/layout_tests/port/webkit.py:

2010-04-21  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Add LayoutTestController interface: computedStyleIncludingVisitedInfo
        https://bugs.webkit.org/show_bug.cgi?id=37759

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::computedStyleIncludingVisitedInfo):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2010-04-21  Eric Seidel  <eric@webkit.org>

        Unreviewed, test fix only.

        new-run-webkit-tests: implement a --log trace message to be able to display detailed output of an individual test run
        https://bugs.webkit.org/show_bug.cgi?id=37726

        This change seems to have broken a test.
        Attempting to handle the case where we don't have any
        timing information.  Dirk may have to correct this change.

        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2010-04-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        new-run-webkit-tests has much higher startup latency than run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=37643

        I got rid of the -expected.checksum reads during startup.
        This makes startup noticably better on my laptop.

        * Scripts/webkitpy/layout_tests/layout_package/dump_render_tree_thread.py:
         - Use image_hash() instead of .image_hash now that expected.checksum
           file reads are done lazily.
        * Scripts/webkitpy/layout_tests/port/http_server_base.py:
         - Add debug logging for this sleep call.